# learn-opengl

./: .gitignore  README.md
example/hello/hello/: hello.sln  hello.vcxproj
example/hello/hello-cmake/: CMakeLists.txt  hello-cmake.cpp  hello-cmake.h
example/hello/hello-glsl/: CMakeLists.txt  exp.fs  exp.vs  exp2.cpp  learn1.cpp  learn2.cpp  main.cpp  main.h
example/hello/hello-opengl/: CMakeLists.txt  hello-exp.cpp  hello-ibo.cpp  hello-opengl.cpp  hello-opengl.h  hello-triangle.cpp  hello-vbo-more.cpp
example/hello/hello-texture/: CMakeLists.txt  exp.cpp  exp.fs  exp.vs  learn.cpp  learn.fs  main.cpp  main.h
example/hello/hello-trans/: CMakeLists.txt  CMakeSettings.json  learn.cpp  learn.vs  main.cpp  main.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw-3.3.4/: glfw3.lib
lib/shader/: CMakeLists.txt  RuntimeTest.cpp  RuntimeTest.h  shader.cpp  shader.h  test.cpp  test.fs
